<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_garage"
        android:icon="@drawable/ic_garage_black_24dp"
        android:title="@string/title_garage" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social_black_24dp"
        android:title="@string/title_social" />
</menu>
